--- a/junctionjourney.html
+++ b/junctionjourney.html
@@ -110,7 +110,7 @@
                   <br></br>
                   <p class="description1">Junction Journey would not only be training the next generation, but would<br>also be penetrating <b>a much larger audience in Pittsburgh: schools and<br>educators</b> - simply by their interaction with children on a daily basis.</p>
                   <p id="subheader"><b>key features</b></p>
-                  <img src="images/CJ/CJ2.png" alt="Image placeholder" class="img-fluid" width="80%">
+                  <img src="images/CJ/screens.png" alt="Image placeholder" class="img-fluid" width="80%">
               </div>
               <div class="col-md-12">
                 <hr id="pushdown">
@@ -133,44 +133,62 @@
                 <img src="images/CJ/reuse.png" id="centering2" alt="Image placeholder" class="img-fluid" width="80%">
               </div>
               <div class="col-md-12">
-                <br>
-                <img src="images/CJ/socialanalysis.png" alt="Image placeholder" class="img-fluid" width="80%">
+                <br></br>
+                <img src="images/CJ/socialanalysis.png" id="centering2" alt="Image placeholder" class="img-fluid" width="80%">
               </div>
               <div class="col-md-12">
                 <br>
                 <p class="description1">The key takeaway was that they market themselves as mostly a buying and selling platform. They are currently <b>not promoting events and their conservation goals on any other site except for their  main website</b>, which is visited least often in comparison to Facebook and Instagram.</p>
               </div>
-              <div class="col-md-12">
+              <div class="col-md-6">
                 <br>
-                <p id="subheader">Stakeholder Analysis</p>
-                <p class="description1">We then proceeded to understand the stakeholders of Construction Junction, paring down the community into four main groups internal and external to Construction Junction:<br></br><b>Environment</b> - the companies that have partnerships with CJ and have similar missions<br><b>Internal</b> - the multiple groups that work together to help Construction Junction function properly<br><b>Education</b> - home to 68 colleges and universities, targeting students, teachers, and faculty<br><b>Local</b> - groups that Construction Junction caters to such as the government, homeowners, and DIYers. On the map, larger bubbles indicate opportunities and overlaps represent parties that have some connection to each other. </p><br>
-                <img src="images/CJ/stakeholdermap.png" alt="Image placeholder" class="img-fluid" width="60%">
+                <p id="subheader"><b>stakeholder analysis</b></p>
+                <p class="description1">We then proceeded to understand the stakeholders of Construction Junction, paring down the community into <b>four main groups</b> internal and external to Construction Junction.</p><br>
+              </div>
+              <div class="col-md-12">
+                <img src="images/CJ/stakeholdermap.png" id="centering" alt="Image placeholder" class="img-fluid" width="60%">
+              </div>
+              <div class="col-md-6">
+                <br></br>
+                <p id="subheader"><b>narrowing scope</b></p>
+                <p class="description1">It was evident that Construction Junction is <b>not successful in promoting their events and goals to help teach the community about reuse.</b> Thus, our team narrowed it down to two main stakeholders groups.</p>
+              </div>
+              <div class="col-md-6">
+                <img src="images/CJ/questions.png" id="moveit3" alt="Image placeholder" class="img-fluid" width="80%"><br></br>
               </div>
               <div class="col-md-12">
                 <br></br>
-                <p id="subheader">Narrowing the Problem</p>
-                <p class="description1">From the social media analysis, it was evident that Construction Junction is <b>not successful in promoting their events and goals to help teach the community about reuse.</b> Thus, our team narrowed it down to two main spaces: focusing on environmental groups and education.</p>
-                <img src="images/CJ/questions.png" alt="Image placeholder" class="img-fluid" width="40%"><br></br>
-                <p class="description1">We chose to focus on the <b>education market</b> for several reasons over environments:<br><b>Reach</b> to a much larger group of people (parents, students at varying levels, teachers, faculty, coaches<br><b>Give back</b> to the community of Pittsburgh with 68+ schools and universities<br><b>Excitement</b> for potential opportunities that could lie ahead</p>
+                <p class="description1">We chose to focus on the <b>education market</b> for several reasons over environments:<br></br><b>Reach</b> to a much larger group of people (parents, students at varying levels, teachers, faculty, coaches<br><b>Give back</b> to the community of Pittsburgh with 68+ schools and universities<br><b>Excitement</b> for potential opportunities that could lie ahead</p>
               </div>
-              <div class="col-md-12">
+              <div class="col-md-6">
                 <br>
-                <p id="rowoverview2">03 Ideation</p>
-                <p class="description1">After narrowing down on the Education space, our team had to come up with some way to use a mobile service to engage educators and students with conservation education. We brainstormed questions in four categories to identify key opportunities.</p>
-                <img src="images/CJ/questions2.png" alt="Image placeholder" class="img-fluid" width="40%"><br></br>
-                <p class="description1">We also used <b>Reverse Assumptions</b> to understand what kinds of mobile services would help us answer these questions</p><br>
-                <img src="images/CJ/reverseassumptions.png" alt="Image placeholder" class="img-fluid" width="60%"><br></br>
+                <p id="subheader"><b>ideation</b></p>
+                <br>
+                <img src="images/CJ/questions2.png" alt="Image placeholder" class="img-fluid" width="80%"><br></br>
+              </div>
+              <div class="col-md-6">
+                <p class="description1" id="moveit">Reverse Assumptions</p>
+                <img src="images/CJ/reverseassumptions.png" alt="Image placeholder" class="img-fluid" width="100%"><br></br>
+              </div>
+              <!--<div class="col-md-6">
                 <p class="description1">The reverse assumptions exercise was helpful in coming up with ideas for our service. Since community is really important to CJ and host a variety of educational opportunities such as site visits, we decided to hone in on schools and particularly the idea of conservation education. We came up with different problem areas within education.</p>
-
+              </div>
+              <div class="col-md=6"></div>
+              <div class="col-md-6">
                 <p id="subheader">Problem Statement Development</p>
-                <p class="description1">Our team came up with 20+ problem statements, voted on our top three, and combined them into one central problem statement.<br></br><b>Top Three:</b><br>We don't have resuability drives in local schools<br>Schools don't understand exactly what we can do for them/how they could benefit<br>We don't have a virtual presence with the younger population of Pittsburgh<br></br><b>Combined Statement:</b><br><b>We don't have a virtual presence with local students in Pittsburgh to share and engage them in our vision</b></p>
-
+                <p class="description1">Top Three:</b><br><b>01</b>We don't have resuability drives at local schools<br><b>02</b>Schools don't understand exactly what we can do for them/how they could benefit<br><b>03</b>We don't have a virtual presence with the younger population of Pittsburgh</p>
+                <p class="description1">Combined Statement:</b><br><b>We don't have a virtual presence with local students in Pittsburgh to share and engage them in our vision</b></p>
+              </div>
+              <div class="col-md-6">
                 <p id="subheader">Concept Development</p>
-                <p class="description1">There were some key questions we had to answer to work with the problem statement:<br></br>01 What <b>age group</b> of students should we target?<br>02 What’s <b>in it for students</b> to get involved with Construction Junction’s mission?<br> 03 How can we <b>improve the way they are giving out information</b> of their reuse mission?<br>We came up with some ideas to further define the considerations and the problem statement.</p>
+                <p class="description1">Unanswered Questions:<br></br>01 What <b>age group</b> of students should we target?<br>02 What’s <b>in it for students</b> to get involved with Construction Junction’s mission?<br> 03 How can we <b>improve the way they are giving out information</b> of their reuse mission?<br>We came up with some ideas to further define the considerations and the problem statement.</p>
                 <img src="images/CJ/concept.png" alt="Image placeholder" class="img-fluid" width="60%"><br></br>
                 <p class="description1">Why is this method effective?</p>
                 <img src="images/CJ/whyitworks.png" alt="Image placeholder" class="img-fluid" width="60%"><br></br>
+              </div>-->
 
+
+              <!--
                 <p id="subheader">Roundtable Brainstorming</p>
                 <p class="description1">We first did a roundtable brainstorm session. Each person in our group was given one page and 60 seconds to draw potential ideas for the screens. Then we rotated when the timer rang. This helped us get all of our thoughts out on paper, so we could have a meaningful discussion about the direction of our mobile app. We also created plans for how we wanted to setup our app prior to low-fi sketching.</p>
                 <img src="images/CJ/roundtable.png" alt="Image placeholder" class="img-fluid" width="60%"><br></br>
@@ -200,10 +218,7 @@
 
 
                 <p id="rowoverview2">04 Iteration</p>
-              </div>
-
-
-
+              </div>-->
 
 
 
@@ -211,45 +226,6 @@
 
 
 <!--
-            <div class="row mb-5">
-              <div class="col-md-6">
-                <p id="rowoverview2">02 Exploratory Research</p>
-                <p class="text">We first did some initial research on Construction Junction and how it fits in with the rest of the Pittsburgh community. Through our research, we found that Construction Junction is committed to raising awareness about sustainability and being environmentally friendly, outside of facilitating the reuse of goods. Currently, they have social media channels they use, but they don't get much traffic. Based on asking people in the community about their familiarity with Construction Junction, it seemed that many people did not know what Construction Junction was, unless they had a need for reused goods.<br></br>We then proceeded to build a stakeholder map of all parties giving and receiving. Larger bubbles indicate opportunities and overlaps represent parties that have some connection to each other. We noticed that there were a significant number of large bubbles under education and we had only seen a few postings for educational workshops and site visits on their social media. This was a huge<strong> opportunity to better connect with schools and educators</strong>, especially given the makeup of the Pittsburgh community - over 29 colleges and many more local high schools and lower education schools.</p>
-              </div>
-            </div>
-            <p class="text-center mb-5"><img src="images/CJ/research.jpg" alt="Image placeholder" class="img-fluid" width="90%"></p>
-            <div class="row mb-5">
-              <div class="col-md-6">
-                <p class="text">Our team came up with 20+ problem statements for why Construction Junction is not currently involved with the education sector. We then voted on which statements we were most interesting to solve and which would be the most impactful for increasing awareness of Construction Junction’s brand. The three we were interested in solving were:<br></br>
-                1. Construction Junction doesn't have a virtual presence with the younger population of Pittsburgh.<br>
-                2. Construction Junction doesn't have reusabiity drives at local schools<br>
-                3. Schools don't understand exactly what Construction Junction can do for them/how they could benefit<br>
-                From this, we synthesized them into one single problem statement:<br></br>
-                <strong>Construction Junction doesn't have a virtual presence with local students in Pittsburgh to share and engage them in their vision.</strong>
-                </p>
-              </div>
-            </div>
-            <p class="text-center mb-5"><img src="images/CJ/problems.jpg" alt="Image placeholder" class="img-fluid" width="60%"></p>
-        </div>
-        ------ things to use from nasa new -----
-
-              <br></br>
-              <div class="col-md-12">
-                  <br></br>
-                  <p class="description1">My research began with learning about the <b>use cases of Playbook, the current features, and the way the current interface works.</b> I asked my teammates several questions and asked them to demo particular actions for me as well. My team also gave me access to a tester site so I could play around with features and user flows on my own, which was really crucial in problem discovery.</p>
-                  <p class="text-center mb-4" id="probvisnasa"><img src="images/NASA/nasavisual3.png" alt="Image placeholder" class="img-fluid" width="300%"></p>
-              </div>
-              <br></br>
-              <div class="col-md-12">
-                <br></br>
-                <p class="text-center mb-4" id="probvisnasa"><img src="images/NASA/nasavisual4.png" alt="Image placeholder" class="img-fluid" width="200%"></p>
-              </div>
-              <br></br>
-              <div class="col-md-6">
-                <br></br>
-                <p id="rowoverview2">03 System Design</p>
-                <p class="description1">As I was playing around with the tester site, I noticed that it took a <b>considerable number of clicks</b> to commit to a certain action. I noticed this had a lot to do with the design of the Playbook system, specifically having an <b>action tray</b> - a tray that pops out when you need to make edits to the schedule. Before going into my main tasking, I decided to see if we could <b>clean up the user flow</b> of editing something. </p>
-              </div>
               --------- things to use from nasanew -----
         <div class="row mb-5">
             <div class="col-md-6">
