--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <nav class="templateux-menu js-templateux-menu" role="navigation">
               <ul>
                 <li class="options"><a href="#work">Work</a></li>
-                <li class="options"><a href="#play">Play</a></li>
+                <!--<li class="options"><a href="#play">Play</a></li>-->
                 <li class="options"><a href="#about">About</a></li>
-                <li class="options"><a href="resume.pdf">Resume</a></li>
+                <li class="options"><a href="images/resume.pdf">Resume</a></li>
               </ul>
             </nav>
           </div>
@@ -151,7 +151,7 @@
         </div>
     </section>
     <!-- END section -->
-            <div class="row" id="play">
+            <!--<div class="row" id="play">
               <div class="col-md-7">
                 <div id="myCarousel" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
@@ -160,8 +160,8 @@
                   <li data-target="#myCarousel" data-slide-to="2"></li>
                 </ol>
 
-  <!-- Wrapper for slides -->
-                <div class="carousel-inner">
+   Wrapper for slides -->
+             <!--   <div class="carousel-inner">
                   <div class="item active">
                     <img src="" alt="Los Angeles">
                   </div>
@@ -173,10 +173,10 @@
                   <div class="item">
                     <img src="ny.jpg" alt="New York">
                   </div>
-                </div>
+                </div>-->
 
   <!-- Left and right controls -->
-                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+               <!-- <a class="left carousel-control" href="#myCarousel" data-slide="prev">
                   <span class="glyphicon glyphicon-chevron-left"></span>
                   <span class="sr-only">Previous</span>
                 </a>
@@ -185,7 +185,7 @@
                   <span class="sr-only">Next</span>
                 </a>
               </div>
-            </div>
+            </div>-->
 
                <!--  <div class="mySlides fade">
                   <div class="images/miranda/featureintro.png">1 / 3</div>
@@ -222,7 +222,7 @@ The dots/circles -->
   <!-- Indicators -->
 
 <!--end of carousel-->
-              <div class="col-md-4" id="play">
+             <!-- <div class="col-md-4" id="play">
                 <br></br>
                 <h1>I love working on side projects to propel my<br>design skills forward.</h1>
                 <div class="media templateux-media mb-4">
@@ -235,7 +235,7 @@ The dots/circles -->
                 </div>
               </div>
             </div>
-    </section>
+    </section>-->
     <!-- END section -->
     <!-- END section -->
     <section class="templateux-section mb-5" id="about">
