--- a/nasanew.html
+++ b/nasanew.html
@@ -33,9 +33,9 @@
             <nav class="templateux-menu js-templateux-menu" role="navigation">
               <ul>
                 <li class="options"><a href="index.html#work" title="Work">Work</a></li>
-                <li class="options"><a href="index.html#play" title="Play">Play</a></li>
+                <!--<li class="options"><a href="index.html#play" title="Play">Play</a></li>-->
                 <li class="options"><a href="index.html#about" title="About">About</a></li>
-                <li class="options"><a href="resume.pdf">Resume</a></li>
+                <li class="options"><a href="images/resume.pdf">Resume</a></li>
               </ul>
             </nav>
           </div>
