changes to lemon

--- a/newlemon.html
+++ b/newlemon.html
@@ -180,16 +180,13 @@
                 <p id="subheader">ideation</p>
                 <img src="images/lemon/groceryprocess.png" alt="Image placeholder" width="100%"><br>
               </div>
-              <div class="col-md-6">
-                <br>
-                <p class="description1"><br>We approached <b>different kinds of grocery shoppers (moms, college students, and working adults)</b> and asked questions on needs + desires as a shopper.<br></p>
-              </div>
-              <div class="col-md-6">
-                <br>
-                <img id="shop" src="images/lemon/shopper.png" alt="Image placeholder" width="90%"><br>
-              </div>
               <div class="col-md-12">
                 <br>
+                <p class="description1">Grocery Store Interviews</p>
+                <img id="shop" src="images/lemon/shopper.png" alt="Image placeholder" width="60%"><br>
+              </div>
+              <div class="col-md-12">
+                <br></br>
                 <img  src="images/lemon/codesign.png" alt="Image placeholder" width="100%"><br></br>
                 <p class="description1">We conducted <b>co-design sessions</b> revolving around an artifact - a plate of spoiled food. The goal was to <b>evoke sentiments</b> associated with the plate.  We interviewed 20 candidates and found that <b>80%</b> of candidates had some issue keeping track of food. We found that consumers <b>buy too much food, throw it away quickly, and pay little attention to waste.</b></p><br>
                 <img  src="images/lemon/insights2.png" id="numbers2" alt="Image placeholder" width="70%">
