--- a/junctionjourney.html
+++ b/junctionjourney.html
@@ -98,19 +98,19 @@
               </div>
           </div>
            <div class="row mb-5">
-              <div class="col-md-6">
+              <div class="col-md-12">
                 <p id="rowoverview2">02 Solution</p>
                   <p class="description1">To address the knowledge gap in the community about Construction Junction's larger mission of promoting conservation and reuse, my team and I came up with Junction Journey: a <b>mobile application</b> geared towards kids that uses gamification and learning science principles to create a fun environment <b>for children to learn about sustainability and conservation.<br></br>Feel free to click around on our <a href="https://framer.cloud/ZIOOL/7"><font color="#DAA520">Framer</font></a> prototype!</b></p>
               </div>
-              <div class="col-md-6">
-                  <br></br></br>
-                  <iframe width="600" height="400" src="https://www.youtube.com/embed/vEvVBsImm8A?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <div class="col-md-12">
+                  <br>
+                  <iframe width="600" height="400" id="centering5" src="https://www.youtube.com/embed/vEvVBsImm8A?autoplay=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
               <div class="col-md-12">
-                  <br></br>
-                  <p class="description1">Junction Journey would not only be training the next generation, but would<br>also be penetrating <b>a much larger audience in Pittsburgh: schools and<br>educators</b> - simply by their interaction with children on a daily basis.</p>
+                  <br></br><br>
                   <p id="subheader"><b>key features</b></p>
-                  <img src="images/CJ/screens.png" alt="Image placeholder" class="img-fluid" width="80%">
+                  <p class="description1">Junction Journey would not only be training the next generation, but would<br>also be penetrating <b>a much larger audience in Pittsburgh: schools and<br>educators</b> - simply by their interaction with children on a daily basis.</p><br>
+                  <img src="images/CJ/screens.png" id="modeltothemiddle" alt="Image placeholder" class="img-fluid" width="70%">
               </div>
               <div class="col-md-12">
                 <hr id="pushdown">
@@ -148,17 +148,11 @@
               <div class="col-md-12">
                 <img src="images/CJ/stakeholdermap.png" id="centering" alt="Image placeholder" class="img-fluid" width="60%">
               </div>
-              <div class="col-md-6">
-                <br></br>
-                <p id="subheader"><b>narrowing scope</b></p>
-                <p class="description1">It was evident that Construction Junction is <b>not successful in promoting their events and goals to help teach the community about reuse.</b> Thus, our team narrowed it down to two main stakeholders groups.</p>
-              </div>
-              <div class="col-md-6">
-                <img src="images/CJ/questions.png" id="moveit3" alt="Image placeholder" class="img-fluid" width="80%"><br></br>
-              </div>
               <div class="col-md-12">
                 <br></br>
-                <p class="description1">We chose to focus on the <b>education market</b> for several reasons over environments:<br></br><b>Reach</b> to a much larger group of people (parents, students at varying levels, teachers, faculty, coaches<br><b>Give back</b> to the community of Pittsburgh with 68+ schools and universities<br><b>Excitement</b> for potential opportunities that could lie ahead</p>
+                <p id="subheader"><b>narrowing scope</b></p>
+                <p class="description1">We chose to focus on the <b>education market</b> for several reasons over environments:<br></br><b>Reach</b> to a much larger group of people (parents, students at varying levels, teachers, faculty, coaches<br><b>Give back</b> to the community of Pittsburgh with 68+ schools and universities<br><b>Excitement</b> for potential opportunities that could lie ahead</p><br>
+                <img src="images/CJ/questions.png" id="centering8" alt="Image placeholder" class="img-fluid" width="40%"><br></br>
               </div>
               <div class="col-md-6">
                 <br>
@@ -169,6 +163,7 @@
               <div class="col-md-6">
                 <p class="description1" id="moveit">Reverse Assumptions</p>
                 <img src="images/CJ/reverseassumptions.png" alt="Image placeholder" class="img-fluid" width="100%"><br></br>
+                <p id="subheader"><b>more information coming soon!</b></p>
               </div>
               <!--<div class="col-md-6">
                 <p class="description1">The reverse assumptions exercise was helpful in coming up with ideas for our service. Since community is really important to CJ and host a variety of educational opportunities such as site visits, we decided to hone in on schools and particularly the idea of conservation education. We came up with different problem areas within education.</p>
@@ -279,7 +274,7 @@
       </div>
       <div class="col-md-12">
         <p id="rowoverview2">05 Links</p>
-        <p class="description1"><a href="https://docs.google.com/presentation/d/e/2PACX-1vS7wlbv9IaxUNZ-i3OKbMsOxJHTWtfF7EMOH4Z4Yzo6AQnum5rtcwPndSz_ufVgEHODqH5Ebt5AZYAw/pub?start=false&loop=false&delayms=3000">Process Book</a></p>
+        <p class="description1"><a href="https://docs.google.com/presentation/d/e/2PACX-1vS7wlbv9IaxUNZ-i3OKbMsOxJHTWtfF7EMOH4Z4Yzo6AQnum5rtcwPndSz_ufVgEHODqH5Ebt5AZYAw/pub?start=false&loop=false&delayms=3000"><font color="#DAA520">Process Book</font></a></p>
       </div>
 
 
