--- a/nasanew.html
+++ b/nasanew.html
@@ -100,28 +100,23 @@
             <div class="row mb-5">
               <div class="col-md-12">
                 <p id="rowoverview2">02 Solution</p>
-                <p class="description1">My final concept consisted of both <b>UI changes but also cleaning up the overall system design.</b></p>
+                <p class="description1">My final concept consisted of both <b>UI changes but also cleaning up the overall system design.</b><br>The proposed user flow <b>cuts the number of clicks by 44%</b>! Key changes:<br></br><font color=" #A9A9A9">01</font></b><b> repurposing the activity tray</b> to be a space where actions can<br>also occur to activities<br></br><b><font color=" #A9A9A9">02</font></b><b> cutting the preferences</b> (ex: having an entry rather than click<br>through a long list of numbers).<br></p>
+                <br>
                 <img src="images/NASA/nasavisual7.png" alt="Image placeholder" class="img-fluid" width="200%">
                 <br>
               </div>
               <div class="col-md-6">
-                <p class="description1" id="userflow2">The proposed user flow <b>cuts the number of clicks by 44%</b>! Although it's only a few clicks change per action, it easily adds up as crew members are constantly changing their schedules throughout spaceflight.<br><br><b><font color=" #A9A9A9">01</font></b><b> repurposing the activity tray</b> to be a space where actions can<br>also occur to activities<br></br><b><font color=" #A9A9A9">02</font></b><b> cutting the preferences</b> (ex: having an entry rather than click<br>through a long list of numbers).</p>
-              </div>
-              <div class="col-md-6"></div>
-              <div class="col-md-6">
-                <br>
+                <br></br>
                   <p id="subheader"><b>shortcut action flow videos</b></p>
                   <p class="description1">There are common shortcuts astronauts use on board a mission. Our goal was to <b>reduce the time</b> required go through these actions through <b>buttons</b> and more <b>efficient action flows.</b></p>
-              </div>
-              <div class="col-md-6" id="pushdown2">
-                  <p class="description1" >Make Copies</p>
-                  <iframe width="500" height="255" src="https://www.youtube.com/embed/l6aGsVMrcuA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <p class="description1" id="centering8">Make Copies</p>
+                  <iframe width="500" height="255" id="centering8" src="https://www.youtube.com/embed/l6aGsVMrcuA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   <br>
-                  <p class="description1" >Recurrence</p>
-                  <iframe width="500" height="255" src="https://www.youtube.com/embed/KMH6lvJBGO0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <p class="description1" id="centering8" >Recurrence</p>
+                  <iframe width="500" height="255" id="centering8" src="https://www.youtube.com/embed/KMH6lvJBGO0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   <br>
-                  <p class="description1" >Slice</p>
-                  <iframe width="500" height="255" src="https://www.youtube.com/embed/OVC3FqVcF7c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <p class="description1" id="centering8">Slice</p>
+                  <iframe width="500" height="255" id="centering8" src="https://www.youtube.com/embed/OVC3FqVcF7c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
               <br>
               <div class="col-md-12">
@@ -152,33 +147,27 @@
                  <p class="text-center mb-4" id="probvisnasa"><img src="images/NASA/nasavisual3.png" alt="Image placeholder" class="img-fluid" width="400%"></p>
               </div>
               <br></br>
-              <div class="col-md-6">
+              <div class="col-md-12">
                 <br></br>
                 <p id="subheader"><b>system design</b></p>
                 <p class="description1">As I was playing around with the tester site, I noticed that it took a <b>considerable number of clicks</b> to commit to a certain action. I noticed this had a lot to do with the design of the Playbook system, specifically having an <b>action tray</b> - a tray that pops out when you need to make edits to the schedule.</p>
               </div>
-              <div class="col-md-6">
-                <p class="text-center mb-4" id="pushdown3"><img src="images/NASA/nasavisual5.png" alt="Image placeholder" class="img-fluid" width="200%"></p>
-              </div>
               <div class="col-md-12">
-                <p class="text-center mb-4" id="userflow1"><img src="images/NASA/nasavisual6.png" alt="Image placeholder" class="img-fluid" height="400%"width="300%"></p>
+                <br></br>
+                <p class="text-center mb-4"><img src="images/NASA/nasavisual6.png" alt="Image placeholder" class="img-fluid" width="300%"></p>
               </div>
-              <br></br>
               <div class="col-md-6">
                 <br></br>
                 <p id="subheader"><b>shortcut flows</b></p>
                   <p class="description1">There were <b>three shortcut flows</b> that I worked on: <b>Copy, Distribute</b> (later renamed Recurrence), and <b>Slice.</b> I also worked on making <b>multiselect</b> easier (changing multiple activities), which you can view in my Internship Final Presentation linked below.</p>
               </div>
               <div class="col-md-12">
-                  <p class="description1"><b>Copy</b></p>
                   <p class="text-center mb-4" id="uservisual"><img src="images/NASA/makecopies.png" alt="Image placeholder" class="img-fluid" width="70%"></p>
               </div>
               <div class="col-md-12">
-                  <p class="description1"><b>Recurrence</b></p>
                   <p class="text-center mb-4" id="uservisual"><img src="images/NASA/recurrence.png" alt="Image placeholder" class="img-fluid" width="70%"></p>
               </div>
               <div class="col-md-12">
-                <p class="description1"><b>Slice</b></p>
                   <p class="text-center mb-4" id="uservisual"><img src="images/NASA/slice.png" alt="Image placeholder" class="img-fluid" width="70%"></p>
               </div>
               <div class="col-md-12">
@@ -198,19 +187,21 @@
                 <p class="description1"><a href="images/NASA/final.pdf"><font color="#DAA520">Final Internship Deck</font></a></p>
                 <p class="description1"><a href="images/NASA/hunch.pdf"><font color="#DAA520">NASA HUNCH Poster</font></a></p>
               </div>
-    <footer class="templateux-footer">
+            </section>
+            <footer class="templateux-footer">
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-6 text-md-left text-center">
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            <div class="container text-center">
-              <p align="left">Copyright 2019-2020 © Simran Jobanputra</p>
-            </div>
+           <div class="container text-center">
+            <p align="left">Copyright 2019-2020 © Simran Jobanputra</p>
+          </div>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
           </div>
         </div>
       </div>
     </footer>
+  </div>
   <script src="js/scripts-all.js"></script>
   <script src="js/main.js"></script>
   </body>
